--- a/tempControl.html
+++ b/tempControl.html
@@ -213,7 +213,7 @@ var overrideTemp=0;
 			document.getElementById("heatCold").innerHTML = "cooling";
 		}
 		else if(overrideTemp > currentTemp) {
-			document.getElementById("heatCold").innerHTML = "Heating";
+			document.getElementById("heatCold").innerHTML = "heating";
 		}
 		else {
 			document.getElementById("heatCold").innerHTML = "";
